test/mason/mason-prereq/prereq-errors.masontest
#!/usr/bin/env bash

set -exo pipefail

cd prereq3

MASON_LOG_LEVEL=info mason build
